<resources>
    <string name="app_name">spoc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="البريدالالكتروني">البريد الالكتروني</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="orders">Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="pharmacy_name">pharmacy_name</string>
    <string name="order_date">order_date</string>
    <string name="agent_name">agent_name</string>
    <string name="pharmacy_namee">Pharmacy Name</string>
    <string name="agent_namee">Agent Name</string>
    <string name="order_datee">Order Date</string>
    <string name="products">Products</string>
    <string name="distributor_name">Distributor Name</string>
    <string name="product_name">Product_name</string>
    <string name="quantity">quantity</string>
    <string name="expiry_date">expiry_date</string>
</resources>