<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@color/background_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".presentation.ui.OrderDetailsFragment">

 <com.google.android.material.appbar.AppBarLayout
     android:id="@+id/appBarLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>


 <ProgressBar
     android:id="@+id/progressBar"
     style="?android:attr/progressBarStyle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:visibility="visible"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />



 <ScrollView



     android:id="@+id/whole_layout"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:visibility="invisible"
     android:layout_margin="@dimen/_10sdp"
     android:background="@drawable/items_background"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/appBarLayout">




  <androidx.constraintlayout.widget.ConstraintLayout

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/_10sdp"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">


   <TextView
       android:id="@+id/branch_name_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_6sdp"
       android:paddingVertical="@dimen/_3sdp"
       android:text="Branch Name"
       android:textSize="@dimen/_16sdp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/distributor_name_tv" />

   <TextView
       android:id="@+id/pharmacy_name_at_distributor_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_6sdp"
       android:paddingVertical="@dimen/_3sdp"
       android:text="Pharmacy Code At Distributor"
       android:textSize="@dimen/_16sdp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/branch_name_tv" />

   <TextView
       android:id="@+id/expired_good_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_6sdp"
       android:paddingVertical="@dimen/_3sdp"
       android:text="Expierd Good"
       android:textSize="@dimen/_16sdp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/pharmacy_name_at_distributor_tv" />

   <TextView
       android:id="@+id/value_of_expired_goods_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_6sdp"
       android:paddingVertical="@dimen/_3sdp"
       android:text="Value Of Expierd Goods"
       android:textSize="@dimen/_16sdp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/expired_good_tv" />

   <TextView
       android:id="@+id/pharmacy_name_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingBottom="@dimen/_3sdp"
       android:text="@string/pharmacy_namee"
       android:textSize="@dimen/_16sdp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/pharmacy_name_tv"
       android:layout_width="0dp"
       android:layout_height="wrap_content"

       android:background="@drawable/details_fields_bg"
       android:padding="@dimen/_5sdp"
       android:text="TextView"
       android:textSize="@dimen/_14sdp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/pharmacy_name_label" />

   <TextView
       android:id="@+id/agent_name_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_6sdp"
       android:paddingVertical="@dimen/_3sdp"
       android:text="@string/agent_namee"
       android:textSize="@dimen/_16sdp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/pharmacy_name_tv" />

   <TextView
       android:id="@+id/agent_name_tv"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:padding="@dimen/_5sdp"
       android:background="@drawable/details_fields_bg"

       android:text="TextView"
       android:textSize="@dimen/_14sdp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/agent_name_label" />

   <TextView
       android:id="@+id/order_date_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_6sdp"
       android:paddingVertical="@dimen/_3sdp"
       android:text="@string/order_datee"
       android:textSize="@dimen/_16sdp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/agent_name_tv" />

   <TextView
       android:id="@+id/order_date_tv"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:padding="@dimen/_5sdp"
       android:background="@drawable/details_fields_bg"
       android:text="TextView"
       android:textSize="@dimen/_14sdp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/order_date_label" />

   <TextView
       android:id="@+id/product_list_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_6sdp"
       android:paddingVertical="@dimen/_3sdp"
       android:text="@string/products"
       android:textSize="@dimen/_16sdp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/order_date_tv" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/products_recyclerview"
       android:layout_width="0dp"
       android:layout_height="wrap_content"

       android:background="@drawable/details_fields_bg"
       android:foregroundGravity="center"
       app:layout_constraintHeight_min="@dimen/_28sdp"
       app:layout_constraintHeight_max="@dimen/_170sdp"
       android:paddingTop="@dimen/_5sdp"
       android:paddingStart="@dimen/_5sdp"
       app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/product_list_label"
       app:spanCount="2" />

   <TextView
       android:id="@+id/distributor_name_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_6sdp"
       android:paddingVertical="@dimen/_3sdp"
       android:text="@string/distributor_name"
       android:textSize="@dimen/_16sdp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/products_recyclerview" />


   <TextView
       android:id="@+id/distributor_name_tv"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:padding="@dimen/_5sdp"
       android:background="@drawable/details_fields_bg"

       android:text="TextView"
       android:textSize="@dimen/_14sdp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/distributor_name_label" />

   <TextView
       android:id="@+id/branch_name_tv"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:padding="@dimen/_5sdp"
       android:background="@drawable/details_fields_bg"

       android:text="TextView"
       android:textSize="@dimen/_14sdp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/branch_name_label" />

   <TextView
       android:id="@+id/pharmacy_name_at_distributor_tv"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:padding="@dimen/_5sdp"
       android:background="@drawable/details_fields_bg"

       android:text="TextView"
       android:textSize="@dimen/_14sdp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/pharmacy_name_at_distributor_label" />

   <TextView
       android:id="@+id/expired_good_tv"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:padding="@dimen/_5sdp"
       android:background="@drawable/details_fields_bg"

       android:text="TextView"
       android:textSize="@dimen/_14sdp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/expired_good_label" />

   <TextView
       android:id="@+id/value_of_expired_goods_tv"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:padding="@dimen/_5sdp"
       android:layout_marginBottom="@dimen/_4sdp"
       android:background="@drawable/details_fields_bg"

       android:text="TextView"
       android:textSize="@dimen/_14sdp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"

       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/value_of_expired_goods_label" />


  </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
