<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@color/background_white"
    tools:context=".presentation.ui.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/items_background"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="SPOC"
                android:textColor="@color/blue"
                android:textSize="@dimen/_50sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.24000001" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_30sdp"

                android:scaleX="0.8"
                android:scaleY="0.8"
                android:src="@mipmap/spoc_logo_large_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Single Point Of Contact"
                android:textColor="@color/blue"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="0dp"
            app:helperTextTextColor="#FF0000"
            app:hintTextColor="@color/blue"
            app:layout_constraintBottom_toTopOf="@+id/password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout"
            app:startIconDrawable="@drawable/ic_round_email_24">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text_field"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field_background"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_18sdp"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeErrorColor="@color/blue"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="#FF0000"
            app:hintTextColor="@color/blue"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout"
            app:startIconDrawable="@drawable/ic_round_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:background="@drawable/text_field_background"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:background="@drawable/buttons_background"
            android:foregroundGravity="center"
            android:gravity="center|center_horizontal"
            android:minWidth="200dp"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="@dimen/_16sdp"
            app:backgroundTint="@color/yellow"
            app:icon="@drawable/ic_round_person_24"
            app:iconGravity="textStart"
            app:iconTint="@color/blue"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout">

        </com.google.android.material.button.MaterialButton>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>